Cleanup TransformAndLoadNonCompliantIT